# MPhysProject

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  build_and_run.bash  cluster.sh  main.cpp  plot_all.gnuplot  polynomial.hpp  run_measurements.sh  speed_of_sound.hpp  utils.hpp
.github/workflows/: codeql-analysis.yml
fitting/: CMakeLists.txt  projectfit.cpp  projectfit.hpp
grapher/: CMakeLists.txt  grapher.hpp
oQTM/: oQTM.hpp
pythonfile/: CMakeLists.txt  data_graphs.py  graphs.py  python_lib.cpp  theoretic_graphs.py
